# SoonShop

./: ARCHITECTURE_OPTIMIZATION.md  SYSTEM_ARCHITECTURE_SUMMARY.md
backend-microservices/: Cargo.toml  DEPLOYMENT.md  ENHANCED_FEATURES.md  Makefile  README.md  docker-compose.yml
backend-microservices/config/: development.toml
backend-microservices/infrastructure/docker/: docker-compose.yml
backend-microservices/k8s/: infrastructure.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  services.yaml
backend-microservices/migrations/: m20240101_000001_create_users_table.rs  m20240101_000002_create_products_table.rs  m20240101_000003_create_orders_table.rs  m20240101_000004_create_payments_table.rs  m20240101_000005_create_inventory_table.rs  m20240101_000006_create_notifications_table.rs  mod.rs
backend-microservices/monitoring/: prometheus.yml
backend-microservices/scripts/: deploy-docker.sh  deploy-k8s.sh  run-integration-tests.sh
backend-microservices/services/api-gateway/: Cargo.toml  Dockerfile  README.md
backend-microservices/services/api-gateway/src/: config.rs  error.rs  main.rs  models.rs  utils.rs
backend-microservices/services/api-gateway/src/handlers/: auth.rs  mod.rs  proxy.rs
backend-microservices/services/api-gateway/src/middleware/: auth.rs  cors.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
backend-microservices/services/api-gateway/src/routes/: mod.rs
backend-microservices/services/api-gateway/src/services/: circuit_breaker.rs  discovery.rs  health_checker.rs  load_balancer.rs  mod.rs
backend-microservices/services/b2c-service/: Cargo.toml  Dockerfile
backend-microservices/services/b2c-service/src/: main.rs
backend-microservices/services/b2c-service/src/config/: mod.rs
backend-microservices/services/b2c-service/src/controllers/: b2c_controller.rs  mod.rs
backend-microservices/services/b2c-service/src/events/: mod.rs
backend-microservices/services/b2c-service/src/models/: mod.rs
backend-microservices/services/b2c-service/src/repositories/: b2c_repository.rs  mod.rs
backend-microservices/services/education-service/: Cargo.toml
backend-microservices/services/education-service/src/: main.rs
backend-microservices/services/enterprise-service/: Cargo.toml  Dockerfile
backend-microservices/services/enterprise-service/src/: main.rs
backend-microservices/services/evaluation-service/: Cargo.toml
backend-microservices/services/evaluation-service/src/: main.rs
backend-microservices/services/healthcare-service/: Cargo.toml
backend-microservices/services/healthcare-service/src/: main.rs
backend-microservices/services/housing-service/: Cargo.toml
backend-microservices/services/housing-service/src/: main.rs
backend-microservices/services/inventory-service/: Cargo.toml  Dockerfile
backend-microservices/services/inventory-service/src/: config.rs  error.rs  events.rs  main.rs  models.rs  repositories.rs  services.rs
backend-microservices/services/notification-service/: Cargo.toml  Dockerfile
backend-microservices/services/notification-service/src/: config.rs  db.rs  error.rs  events.rs  main.rs  models.rs  repositories.rs  services.rs
backend-microservices/services/order-service/: Cargo.toml  Dockerfile
backend-microservices/services/order-service/src/: config.rs  db.rs  error.rs  events.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
backend-microservices/services/payment-service/: Cargo.toml  Dockerfile
backend-microservices/services/payment-service/src/: config.rs  db.rs  error.rs  events.rs  main.rs  repositories.rs  security.rs
backend-microservices/services/price-service/: Cargo.toml
backend-microservices/services/price-service/src/: main.rs
backend-microservices/services/product-service/: Cargo.toml  Dockerfile
backend-microservices/services/product-service/src/: main.rs
backend-microservices/services/restaurant-service/: Cargo.toml
backend-microservices/services/restaurant-service/src/: main.rs
backend-microservices/services/user-service/: Cargo.toml  Dockerfile
backend-microservices/services/user-service/src/: main.rs
backend-microservices/shared/common/: Cargo.toml
backend-microservices/shared/common/src/: api_docs.rs  auth.rs  constants.rs  database.rs  errors.rs  lib.rs  logging.rs  messaging.rs  metrics.rs  middleware.rs  utils.rs
backend-microservices/shared/event-bus/: Cargo.toml
backend-microservices/shared/event-bus/src/: bus.rs  config.rs  error.rs  event.rs  handler.rs  lib.rs  metrics.rs  publisher.rs  rabbitmq_bus.rs  router.rs  storage.rs  subscriber.rs
backend-microservices/shared/events/: Cargo.toml
backend-microservices/shared/events/examples/: enhanced_event_system.rs
backend-microservices/shared/events/src/: config.rs  enhanced_publisher.rs  error.rs  event_types.rs  handlers.rs  inventory_events.rs  lib.rs  metrics.rs  notification_events.rs  order_events.rs  payment_events.rs  product_events.rs  publisher.rs  retry.rs  storage.rs  subscriber.rs  user_events.rs
backend-microservices/shared/monitoring/: Cargo.toml
backend-microservices/shared/monitoring/src/: alerts.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  performance.rs  prometheus_metrics.rs  tracing.rs
backend-microservices/shared/schemas/: Cargo.toml
backend-microservices/shared/schemas/src/: inventory.rs  lib.rs  notification.rs  order.rs  payment.rs  product.rs  user.rs
backend-microservices/tests/: Cargo.toml
backend-microservices/tests/integration/: api_gateway_tests.rs  e2e_tests.rs  mod.rs
backend-microservices/tests/integration/common/: mod.rs
contract-solana/: Anchor.toml  Cargo.toml  DIRECTORY_STRUCTURE.md  README.md  build.sh  package.json  tsconfig.json  version.md
contract-solana/client/: Cargo.toml
contract-solana/client/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs
contract-solana/programs/soonshop-core/: Cargo.toml
contract-solana/programs/soonshop-core/src/: constants.rs  errors.rs  lib.rs
contract-solana/tests/: Cargo.toml  security_tests.rs  soonshop_integration_tests.rs  test_helpers.rs  unit_tests.rs
(+162 files in other folders)
