[workspace]
resolver = "2"

members = [
    "programs/soonshop-core",
    # 暂时注释掉这些成员以避免版本冲突
    # "client",
    # "tests",
    # "bin/cli",
]

[workspace.dependencies]
# Anchor framework dependencies
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-client = "0.31.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Oracle dependencies (removed to avoid version conflicts)
# switchboard-v2 = "0.4.0"
# pyth-sdk-solana = "0.10"
# pyth-solana-receiver-sdk = "0.2"

# SoonShop specific dependencies (if any will be added here)

# Utility dependencies
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
arrayref = "0.3.6"
bincode = "1.3.3"
bytemuck = { version = "1.7.2", features = ["min_const_generics"] }
default-env = "0.1.1"
derivative = "2.2.0"
num_enum = "0.5.1"
static_assertions = "1.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing dependencies
tokio = { version = "1.0", features = ["full"] }
pretty_assertions = "1.0"

# Logging dependencies
log = "0.4"
env_logger = "0.11"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 