[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.3"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-jaeger = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.21"
governor = "0.6"
actix-web-httpauth = "0.8"
actix-web-validator = "5.0"
validator = { version = "0.16", features = ["derive"] }
once_cell = "1.19"
futures = "0.3"
tower = "0.4"
hyper = "0.14"
config = "0.13"
async-trait = "0.1"
dashmap = "5.5"
rand = "0.8"
url = "2.4"

# 共享依赖
common = { path = "../../shared/common" }
events = { path = "../../shared/events" }
schemas = { path = "../../shared/schemas" } 