[package]
name = "housing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-cors = { workspace = true }
validator = { workspace = true }
common = { path = "../../shared/common" }
events = { path = "../../shared/events" }
schemas = { path = "../../shared/schemas" } 