[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"

# 数据库相关
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# 缓存和消息队列
redis = { version = "0.24", features = ["tokio-comp"] }
lapin = "2.3"

# 监控和追踪
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"

# 验证和配置
validator = { version = "0.16", features = ["derive"] }
config = "0.13"
once_cell = "1.19"

# 共享依赖
common = { path = "../../shared/common" }
events = { path = "../../shared/events" }
schemas = { path = "../../shared/schemas" } 