[package]
name = "price-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Common utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Message queue
lapin = { workspace = true }

# Validation
validator = { workspace = true }

# Configuration
config = { workspace = true }

# CLI
clap = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Futures
futures = { workspace = true }

# Shared libraries
common = { path = "../../shared/common" }
events = { path = "../../shared/events" }
schemas = { path = "../../shared/schemas" } 