[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# 消息队列
lapin = "2.0"
redis = { version = "0.24", features = ["tokio-comp"] }

# 数据库
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# 序列化
bincode = "1.3"

# 监控
prometheus = "0.13"
tracing = "0.1"

# 异步工具
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
once_cell = "1.19"

# 错误处理
eyre = "0.6"

# 新增依赖
rust_decimal = { version = "1.35", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 