[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
# 监控和指标
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry-prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
tracing-appender = "0.2"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# UUID
uuid = { version = "1.0", features = ["v4"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步特征
async-trait = "0.1"

# 配置
config = "0.13"
once_cell = "1.19"

# 日志
log = "0.4"

# 系统信息
sysinfo = "0.30"

# 网络
ping = "0.5"

[dev-dependencies]
tokio-test = "0.4" 