[package]
name = "schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }

# SeaORM 相关依赖
sea-orm = { workspace = true }

# 共享库依赖
common = { path = "../common" } 